Update Event Email
